; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_omp-low.c_lower_omp_single_simple.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_omp-low.c_lower_omp_single_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@built_in_decls = common dso_local global i32* null, align 8
@BUILT_IN_GOMP_SINGLE_START = common dso_local global i64 0, align 8
@COND_EXPR = common dso_local global i32 0, align 4
@void_type_node = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @lower_omp_single_simple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lower_omp_single_simple(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** @built_in_decls, align 8
  %7 = load i64, i64* @BUILT_IN_GOMP_SINGLE_START, align 8
  %8 = getelementptr inbounds i32, i32* %6, i64 %7
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @build_function_call_expr(i32 %10, i32* null)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* @COND_EXPR, align 4
  %13 = load i32, i32* @void_type_node, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @OMP_SINGLE_BODY(i32 %15)
  %17 = call i32 @build3(i32 %12, i32 %13, i32 %14, i32 %16, i32* null)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @gimplify_and_add(i32 %18, i32* %19)
  ret void
}

declare dso_local i32 @build_function_call_expr(i32, i32*) #1

declare dso_local i32 @build3(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @OMP_SINGLE_BODY(i32) #1

declare dso_local i32 @gimplify_and_add(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
